Agregando el footer al proyecto

--- a/index.html
+++ b/index.html
@@ -137,6 +137,25 @@
 
 </body>
 
+
+<footer>
+	<!--Div padre-->
+	<div class="div-padre">
+		<div class="div-md">
+			<h1>Hecho por:</h1>
+			<p>Gabriel Alejandro Herrera Gandarela</p>
+			<p>Alumno de Escuela de Código</p>
+		</div>
+		<div class="div-md">
+			<h1>Correo: </h1>
+			<a href="mailto:gabrielos307@gmail.com">gabrielos307@gmail.com</a>
+		</div>
+	</div>
+	<hr>
+	<p class="texto-footer">Derechos reservados &copy;</p>
+	
+</footer>
+
 <script type="text/javascript">
 	//alert("hola, soy una alerta !!!!")
 	//confirm("¿Deseas saber acerca de la autonomía económica?")
@@ -148,6 +167,8 @@
 <script src="js/alerta-nombre.js"></script>
 
 <script src="js/hola-mundo.js"></script>
+
+<script src="js/MensajeEnConsola.js"></script>
 
 
 
