agregamos página de inicio para el proyecto

--- a/index.html
+++ b/index.html
@@ -9,39 +9,40 @@
 </head>
 
 
-<header>
-	<!---Div padre-->
-	<div class="menu-padre">
-		<div class="menu-img">
-			<img src="img/icono.png" height="80"  width="80">	
-			<h1 style="color:#fff; padding-left:10px ">Doméstico</h1>
-		</div>
-		<div class="menu">
-			<ul class="menu-lista">
-				<li class="pad-sm">
-					<a class="enlaces-menu" href="#">Inicio</a>
-				</li>
-				<li class="pad-sm">
-					<a class="enlaces-menu" href="#">Horno de microondas</a>
-				</li>
-				<li class="pad-sm">
-					<a class="enlaces-menu" href="#">Licuadoras</a>
-				</li>
-				<li class="pad-sm">
-					<a class="enlaces-menu" href="#">Contacto</a>
-				</li>
-			</ul>
-		</div>	
-	</div>
-</header>
+
 
 <body>
-
+	<header>
+		<!---Div padre-->
+		<div class="menu-padre">
+			<div class="menu-img">
+				<img src="img/icono.png" height="80"  width="80">	
+				<h1 style="color:   #fff; padding-left:10px ">Doméstico</h1>
+			</div>
+			<div class="menu">
+				<ul class="menu-lista">
+					<li class="pad-sm">
+						<a class="enlaces-menu" href="#">Inicio</a>
+					</li>
+					<li class="pad-sm">
+						<a class="enlaces-menu" href="#">Horno de microondas</a>
+					</li>
+					<li class="pad-sm">
+						<a class="enlaces-menu" href="#">Licuadoras</a>
+					</li>
+					<li class="pad-sm">
+						<a class="enlaces-menu" href="#">Contacto</a>
+					</li>
+				</ul>
+			</div>	
+		</div>
+	</header>
+	<div>
 	<h1 id="saludo"></h1>
 	<h2 id="mi-nombre">
 		<!---Inserta el mensaje de JS--->
 	</h2>
-
+	<h2 style="color:#000">hola</h2>
 	<button onclick="edad_fun()">Click para correr la función</button>
 
 
@@ -134,10 +135,7 @@
 
 
 	<img src="img/perrito.jpg" width="400" height="250">
-
-</body>
-
-
+</div>
 <footer>
 	<!--Div padre-->
 	<div class="div-padre">
@@ -155,6 +153,10 @@
 	<p class="texto-footer">Derechos reservados &copy;</p>
 	
 </footer>
+
+</body>
+
+
 
 <script type="text/javascript">
 	//alert("hola, soy una alerta !!!!")
